--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
 
 		<dependency>
 			<groupId>com.google.zxing</groupId>
-			<artifactId>core</artifactId>
+			<artifactId>javase</artifactId>
 			<version>${google.zxing.version}</version>
 		</dependency>
 	</dependencies>
